--- a/plusesAndMinuses.html
+++ b/plusesAndMinuses.html
@@ -6,5 +6,9 @@
 
   <body>
     <!-- Your HTML here -->
+    <button id='plus'>Plus Button</button>
+    <button id="minus">Minus Button</button>
+
+    <script src="plussesAndMinuses.js"></script>
   </body>
 </html>
