--- a/plusesAndMinuses.html
+++ b/plusesAndMinuses.html
@@ -5,10 +5,10 @@
   </head>
 
   <body>
-    <!-- Your HTML here -->
     <button id='plus'>Plus Button</button>
     <button id="minus">Minus Button</button>
-
-    <script src="plussesAndMinuses.js"></script>
+	<p id="count"></p>
+	
+    <script src="plusesAndMinuses.js"></script>
   </body>
 </html>
