I think I completed the To Do list Thing. Consider this a rough draft

--- a/toDoList.html
+++ b/toDoList.html
@@ -8,7 +8,7 @@
     <main>
       <h1>To Do:</h1>
       <ul class="today-list">
-        <li>
+        <li class = 'Incomplete'>
           <span>Reading</span>
           <a class="delete">Delete</a>
         </li>
